@@ -21,12 +21,6 @@ Available Patches:
 	Status: 
           doc patch at http://marc.theaimsgroup.com/?l=apache-modperl&m=97450363501652&w=2
 
-    * Apache::Utils::escape_html issues
-        Report: http://marc.theaimsgroup.com/?l=apache-modperl&m=101180404809059&w=2
-	Status:
-          "patch" available
-             http://marc.theaimsgroup.com/?l=apache-modperl-dev&m=101188287032621&w=2
-
     * Apache::RegistryNG issues
         Report: http://marc.theaimsgroup.com/?l=apache-modperl-dev&m=101240123609773&w=2
 	Status:
