@@ -10,6 +10,10 @@ all changes without author attribution are by Doug MacEachern
 
 =item 1.26_01-dev
 
+properly escape highbit chars in Apache::Utils::escape_html
+[Geoff Young <geoff@modperlcookbook.org>,
+Robin Berjon <robin@knowscape.com>]
+
 allow $r->auth_name and $r->auth_type to be set on win32
 [John Kelly <john_kelly@uk.ibm.com>]
 
